<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_add"
        android:icon="@drawable/ic_add"
        android:title="@string/title_add" />

    <item
        android:id="@+id/navigation_contact"
        android:icon="@drawable/ic_contact"
        android:title="@string/title_contact" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_face"
        android:title="@string/title_profile" />
</menu>
